# PROG2002_Graphics_prog_assignment2

./: CMakeLists.txt  README.md
res/levels/: level0  level1
res/shaders/: character.frag  character.vert  lightsrc.vert  shader.frag  shader.vert  tile.frag  tile.vert
src/: ghost.cpp  ghost.hpp  main.cpp
src/framework/: entity.cpp  entity.hpp  globals.hpp  ibo.cpp  ibo.hpp  mesh.cpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  tilemap.cpp  tilemap.hpp  vbo.hpp
